cpp/test/Slice/errorDetection/LocalMismatch.err
LocalMismatch.ice:12: local `Intf1' was declared non-local
LocalMismatch.ice:13: local `Intf1' was declared non-local
LocalMismatch.ice:13: parse error
LocalMismatch.ice:16: local `Intf2' was defined non-local
LocalMismatch.ice:19: non-local `Intf3' was declared local
LocalMismatch.ice:20: non-local `Intf3' was declared local
LocalMismatch.ice:20: parse error
LocalMismatch.ice:23: non-local `Intf4' was defined local
LocalMismatch.ice:26: local `Class1' was declared non-local
LocalMismatch.ice:27: local `Class1' was declared non-local
LocalMismatch.ice:27: parse error
LocalMismatch.ice:30: local `Class2' was defined non-local
LocalMismatch.ice:33: non-local `Class3' was declared local
LocalMismatch.ice:34: non-local `Class3' was declared local
LocalMismatch.ice:34: parse error
LocalMismatch.ice:37: non-local `Class4' was defined local
